# md2latex

./: .gitignore  README.md  pyproject.toml
src/md2tex_mermaid/: cli.py  converter.py  mermaid.py  pandoc.py  util.py
tests/: test_conversion.py
tests/fixtures/: sample.md
